# stamp

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  fly.toml  serve.py  stamp_cli.py  substrate_cli.py
examples/hono-jwt/: jwt_verify_reconstructed.py
examples/ml-service/: app.py  test_app.py
examples/openolat-oidc/: oidc_verify_reconstructed.py
memory/: 2026-04-05.md  2026-04-07.md  2026-04-08.md
projects/: PUNCHLIST.md  ROADMAP.md  SYNTHESIS-2026-04-11.md  code-review-deep.md  domain-corpora-map.md  harness-design.md  knowledge-system-overlays.md  mother-type-definitions.md  mother-type-system.md  opus-pressure-test-2026-04-10.md  opus-prompt-verification-core.md  opus-surface-review-2026-04-11.md  thinking-log-architecture.md  thinking-log-master.md
projects/corpus-runs/: 2026-04-11-mother-type-evidence.md
projects/sidecar/: README.md  anchor.py  audio_claim.py  bridge.py  cockpit.html  harness.py  intent.py  ledger.py  seed_spec.json  sieve_harness.py  turn_chain.py  verify.py  watcher.py
rust/: Cargo.toml
rust/src/: core.rs  io.rs  main.rs  stamp.rs
specs/: TURN_PRIMITIVE.md  may1_demo_card.md  may1_demo_receipt_mock_langflow_csv_agent.md  may1_demo_script_card_langflow_csv_agent.md  mvp_product_requirements.md  turn_v0.md  type_algebra_v0.md  type_system_v0.md  type_system_v0_implementation_checklist.md
src/surface/: action_witness.py  analyzer.py  epistemic_tagger.py  hashing.py  (+10 more)
tests/: test_action_witness.py  test_parity.py  test_pipeline_determinism.py  test_receipt_integrity.py  test_store.py  test_witness_edge_cases.py
(+2 files in other folders)
