[package]
name = "substrate"
version = "0.1.0"
edition = "2021"
description = "Receipted substrate: hash-chained provenance for governed meaning"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
